# mlflow-prophet-lab

./: .gitignore  README.md  pyproject.toml
.virtual_documents/notebooks/: Untitled.ipynb  hpo.ipynb  model.ipynb  plain_prophet.ipynb  show_model.ipynb
configs/: local.json
notebooks/: hpo.ipynb  model.ipynb  plain_prophet.ipynb  raw_data.ipynb  show_model.ipynb  train_model.ipynb
src/mlflow_prophet_lab/: __main__.py  config.py  cross_validation.py  data_loader.py  holidays.py  weekends_remover.py
tests/dataseed/: exchange_rates.csv
