[project]
name = "mlflow-prothet-lab"
version = "0.1.0"
description = "exploring mlflow with prothet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlflow (>=3.8.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "nb-mypy (>=1.0.6,<2.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "prophet (>=1.2.1,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "holidays (>=0.87,<0.88)",
    "pandas-stubs (>=2.3.3.251219,<3.0.0.0)",
]

[tool.poetry]
packages = [{include = "mlflow_prophet_lab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-lsp-server (>=1.14.0,<2.0.0)",
    "jupyterlab-lsp (>=5.2.0,<6.0.0)"
]
